--- a/Task 1 - Temperature Converter/index.html
+++ b/Task 1 - Temperature Converter/index.html
@@ -19,7 +19,7 @@
         </div>
         <button id="convert">Convert</button>
     </div>
-
+     <div class="info">use this one to get exact value from celcius to fahrenheit</div>
     <script src="app.js"></script>
 </body>
 </html>
